tests/untried/neg/object-not-a-value.check
object-not-a-value.scala:5: error: object java.util.List is not a value
    List(1) map (_ + 1)
    ^
1 error found
